fixed alignment for the banner

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -24,7 +24,8 @@
 
 #banner {
 	height: 80vh;
-	padding: 20vh 0;
+	display: flex;
+	align-items: center;
 }
 
 .icon-font-l {
